<resources>
    <string name="invitation_title">Group Chat Invite</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="invite_menu_label">Invite Friends</string>
    <string name="sign_in">Log In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_username_or_email">Please enter username or email address</string>
    <string name="information_emailed">Information has been emailed</string>
    <string name="find">Find</string>
    <string name="login_with_google">Log in with Google</string>
    <string name="delete_message_question">Delete Message?</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="block_person_title">Block</string>
    <string name="block_person_question">Are you sure you want this?  This person will not be able to send you direct messages and you will not see any more of his or her posts in any of the chat rooms.  If you wish, you can unblock later.</string>
    <string name="block_person_failed">Could not block.  Please try again.</string>
    <string name="block_person_success">was blocked.</string>
    <string name="unblock_person_title">Unblock </string>
    <string name="unblock_person_question">Are you sure?  This person will be able to send you direct messages and you can see his or her posts in the rooms.</string>
    <string name="unblock_person_failed">Error.  Please try again.</string>
    <string name="unblock_person_success">Unblocked!</string>
    <string name="block_cannot_block_yourself">You cannot block yourself silly!</string>
    <string name="message_delete_title">Delete Message?</string>
    <string name="message_delete_question">Are you sure you want to delete this?  Nobody will be able to see it again.  It will be gone forever.</string>
    <string name="message_delete_success">Successfully deleted message from conversation</string>
    <string name="message_delete_failed">Could not delete message from conversation.  It may have already been deleted.  If not, try again.</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="success_exclamation">Success!</string>
    <string name="oops_exclamation">Error!</string>
    <string name="rationale_storage">This app reads photos from your camera so you can upload the photos that you choose to upload.</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_or_username">Username or Email</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="create_account">Create Account</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="general_api_error">Error. Please try again.</string>
    <string name="email_exists">This email is already taken : </string>
    <string name="username_exists">This username is already taken : </string>
    <string name="email_password_not_found">Account not found or wrong password.  Please try again.</string>
    <string name="wrong_password">Wrong password.  Try again.</string>
    <string name="menu_choose_photo">Choose Photo</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="message_hint">Send a friendly message…</string>
    <string name="error_send_photo">Sorry, could not upload photo. Please try again.</string>
    <string name="username_changed_dialog_title">Username Changed!</string>
    <string name="your_profile_has_been_updated_title">Saved!</string>
    <string name="your_profile_has_been_updated_msg">Your profile has been saved</string>
    <string name="title_update_my_pic">Update My Photo</string>
    <string name="sent_via">Sent via </string>
    <string name="preview_area">Preview Area</string>
    <string name="post_area">Post Area</string>
    <string name="no_thumbnail">No Thumbnail</string>
    <string name="choose_thumbnail">Choose a Thumbnail</string>
    <string name="post">Post</string>
    <string name="photo">Photo</string>
    <string name="group_chat_header">LIVE ROOMS</string>
    <string name="private_chat_header">DIRECT MESSAGES</string>
    <string name="could_not_send_message">Sorry!  Could not send message.  Please try again.</string>
    <string name="please_upload_photo">Please upload a display photo to start chatting</string>
    <string name="bio">Bio</string>
    <string name="hint_write_something_about_yourself">Write something about yourself ...</string>
    <string name="sweet_alert_dialog_default_title"> </string>
    <string name="sweet_alert_dialog_ok">Ok</string>
    <string name="sweet_alert_dialog_cancel">Cancel</string>
    <string name="sweet_alert_loading_message">Loading ...</string>
    <string name="save_username">Save</string>
    <string name="share_message">Share Message</string>
    <string name="share_photo">Share Photo</string>
    <string name="please_choose_person_or_group">Please choose person or group</string>
    <string name="people_in_group">Who is online</string>
    <string name="view_profile">View Profile</string>
    <string name="options">Options</string>
    <string name="display_photo">Before you can post messages, please add a display photo of yourself</string>
    <string name="display_photo_title">Add display photo</string>
    <string name="display_photo_tooltip">Tap here to upload a display photo of yourself</string>
    <string name="toolbar_user_profile_tooltip">Tap here to see the profile again</string>
    <string name="change_username_tooltip">Tap here to change your username</string>
    <string name="change_bio_tooltip">Tap here to change your bio</string>
    <string name="change_photo_tooltip">Tap here to change your photo</string>
    <string name="message_copied_to_clipboard">Message copied to clipboard</string>
    <string name="manage_blocks">Manage Blocks</string>
    <string name="message_options_title">Message Options</string>
    <string name="cannot_chat_you_blocked_them">You blocked this person on a previous occasion : </string>
    <string name="online_now">online now</string>
    <string name="just_now">just now</string>
    <string name="less_than_one_minute_ago">less than 1 minute ago</string>
    <string name="some_minutes_ago">minutes ago</string>
    <string name="one_hour_ago">1 hour ago</string>
    <string name="some_hours_ago">hours ago</string>
    <string name="one_day_ago">1 day ago</string>
    <string name="some_days_ago">days ago</string>
    <string name="some_months_ago">month(s) ago</string>
    <string name="more_than_one_year_ago">more than 1 year ago</string>
    <string name="anonymous_user">user</string>
    <string name="reply">Reply</string>
    <string name="type_your_reply_here">Type your reply here</string>
    <string name="send_normal">Send as normal Message</string>
    <string name="send_one_time">Send as disappearing Message</string>
    <string name="what_is_one_time">What is disappearing?</string>
    <string name="one_time_definition">A disappearing message is a message that appears blurry and can only be opened once by tapping on it.  After that, it cannot be opened again.  However, the sender may open it again, others cannot.</string>
    <string name="copy_text">Copy Text</string>
    <string name="delete_message">Delete Message</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="logout_title">Sign Out</string>
    <string name="logout_question">Do you want to sign out now?</string>
    <string name="user_active_in_group">Currently in</string>
    <string name="web_clipping">Web Clipping :</string>
    <string name="fetching_web_clipping">Fetching web clipping ...</string>
    <string name="default_bio2">Hello!  Send me a message!</string>
    <string name="like_singular">1 like</string>
    <string name="likes_plural">likes</string>
    <string name="received_likes_title">Your Likes</string>
    <string name="possible_explicit_content_warning">Warning : this photo may contain inappropriate or explicit content</string>
    <string name="one_time_message_has_been_read_already">You have already opened this disappearing message.</string>
    <string name="one_time_message_notification_title">Disappearing Message</string>
    <string name="one_time_photo_notification_title">Disappearing Photo</string>
    <string name="send_option_protips">Long-press for more options!</string>
    <string name="possible_explicit_content_warning_pls_choose_another">Warning : this photo may contain inappropriate or explicit content.  Please choose another photo.</string>
    <string name="warning">Warning</string>
    <string name="menu_option_pending_requests">New Pending Requests!</string>
    <string name="left_drawer_pending_request_singular">1 new pending request!</string>
    <string name="left_drawer_pending_requests_plural">new pending requests!</string>
    <string name="pending_requests_title">Pending Requests</string>
    <string name="accept_request_title">Accept</string>
    <string name="accept_request_question">would like to chat</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="report_person_title">Report</string>
    <string name="report_person_question">Are you reporting this person for internet chat abuse?  We take these things seriously.  We will investigate this person and if found to be truly abusive, we will take action.  Thank you.</string>
    <string name="report_person_failed">Error.  Could not report.  Please try again.</string>
    <string name="report_person_success">Reported : </string>
    <string name="photo_not_available">Disappearing Photo is not available anymore</string>
    <string name="welcome_back_old_user">Welcome back and very happy to see you again!  Please enter your email address to complete your account!  Thank you!</string>
    <string name="loading">Loading ...</string>
    <string name="hint_password">Password (6-20 characters)</string>
    <string name="friend_just_jumped_in">Jumped in!  Tap to see what is going on!</string>
    <string name="pending_requests_text">People want to chat with you now!</string>
    <string name="enter_first_comment">Hi!  Share what is on your mind right now</string>
    <string name="gave_like_singular">gave 1 like</string>
    <string name="gave_likes_plural">Likes given : </string>
    <string name="name_your_room">Name Your Room</string>
    <string name="room_name">ROOM NAME</string>
    <string name="every_gets_own_room">Everybody gets their own personal chat room!</string>
    <string name="next">NEXT</string>
    <string name="no_thanks_dont_need_room_skip">No thanks, I do not need my own room.  Skip.</string>
    <string name="nice_room_name">Awesome room name!  We will notify you when it is ready!</string>
    <string name="invalid_roomname">Error.  Invalid Room Name.  Please try a different name.</string>
    <string name="get_started">Get Started!</string>
    <string name="could_not_open_url">Sorry!  Could not open.  Try copying comment and open in browser</string>
    <string name="camera_permission_rationale">Need camera and record-audio permission for real-time video chatting</string>
    <string name="channel_new_messages">New messages</string>
    <string name="channel_activity">Activity</string>
    <string name="said">said :</string>
    <string name="you_have_been_banned">You have been temporarily banned</string>
    <string name="title_banned_users">Banned Users</string>
</resources>