<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_pending_requests"
        android:title="@string/menu_option_pending_requests"/>

    <item
        android:id="@+id/menu_who_is_online"
        android:title="@string/people_in_group"/>

    <item
        android:id="@+id/menu_banned_users"
        android:title="@string/title_banned_users"/>

    <item
        android:id="@+id/menu_invite"
        android:title="@string/invite_menu_label"/>

    <item
        android:id="@+id/menu_manage_blocks"
        android:title="@string/manage_blocks"/>

    <item
        android:id="@+id/menu_sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_clear_room"
        android:title="clear room comments"/>

</menu>
