<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/fresh_config_menu"
        android:title="@string/fresh_config"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_invite"
        android:title="@string/invite_menu_label"/>
    <item
        android:id="@+id/crash_menu"
        android:title="@string/cause_crash"/>
    <item
        android:id="@+id/full_screen_texts_menu"
        android:title="Full-Screen Chat"/>

    <item
        android:id="@+id/download"
        android:title="Download"/>
</menu>
