<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/claim_room_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context="com.instachat.login.ClaimRoomActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/name_your_room"
            android:textSize="45sp"
            android:textStyle="bold"
            android:fontFamily="@font/signpainter_housescript"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_room_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/input_room_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/room_name"
                    android:inputType="textNoSuggestions"
                    android:maxLength="@integer/max_username_length"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/everybody_gets_own_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="13dp"
                android:text="@string/every_gets_own_room"
                android:textColor="@color/colorPrimaryDark"
                />

            <Button
                android:id="@+id/next"
                android:layout_width="280dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/no_thanks_dont_need_room_skip"
                android:textColor="#0095c4"
                />

        </LinearLayout>

    </FrameLayout>

</layout>
