<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".GroupChatActivity">

        <TextView
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_update_my_pic"
            android:textSize="16sp"
            android:textStyle="bold"
            app:font="@{`Lato-Regular`}"
            android:gravity="center_vertical"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            />

        <TextView
            android:id="@+id/menu_choose_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_choose_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            app:font="@{`Lato-Regular`}"
            android:drawableLeft="@drawable/ic_photo_library_black_36dp"
            android:gravity="center_vertical"
            android:paddingLeft="32dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            />

        <TextView
            android:id="@+id/menu_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_take_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            app:font="@{`Lato-Regular`}"
            android:drawableLeft="@drawable/ic_photo_camera_black_36dp"
            android:gravity="center_vertical"
            android:paddingLeft="32dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            />

    </LinearLayout>

</layout>